Fix: adjust runGame() to faciliate the hiding of the computer score and making it visible when user holds

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,7 +78,6 @@ body {
     color: green;
 }
 
-.btn--green:active,
 .btn--green:hover {
     background-color: green;
     color: white;
@@ -89,7 +88,6 @@ body {
     color: black;
 }
 
-.btn--black:active,
 .btn--black:hover {
     background-color: black;
     color: white;
@@ -99,8 +97,7 @@ body {
     border-color: grey;
 }
 
-.btn--red:active,
-.btn--red:hover {
+.btn--grey:hover {
     background-color: grey;
     color: white;
 }
